# CudaAI

./: .gitignore  CMakeLists.txt  README.md
atomic/: CMakeLists.txt  histogram.cu  no_race.cu  race.cu  shistogram.cu
cuda_memory/: malloc_cpy  malloc_cpy.cu  reduce_smem  reduce_smem.cu  vec_add  vec_add.cu
flash_attention/: CMakeLists.txt  fa_v1.cu  fa_v2.cu  fa_v2_my.cu  fa_v2_old.cu  flash_attention.cu
hello_world/: hello_world  hello_world.cu
matmul/: CMakeLists.txt  matmul0.cu  matmul1.cu  matmul2.cu  matmul3.cu  matmul4.cu  matmul5.cu  matmul5_test.cu  roofline_1660ti  roofline_bench_gtx1660ti.cu
online_softmax/: CMakeLists.txt  online_softmax  online_softmax.cu
prefixsum/: CMakeLists.txt  kogge_stone1.cu  kogge_stone2.cu  multi_block.cu  work_efficient.cu
reduce/: CMakeLists.txt  reduce_v0  reduce_v0.cu  reduce_v1  reduce_v1.cu  reduce_v2  reduce_v2.cu  reduce_v3  reduce_v3.cu  reduce_v4  reduce_v4.cu
rmsnorm/: rmsnorm  rmsnorm.cu  rmsnorm_report.ncu-rep
sgemm/: CMakeLists.txt  roofline_bench.cu  sgemm.cu  sgemm_kernels.cu
softmax/: CMakeLists.txt  softmax  softmax.cu
topk/: CMakeLists.txt  topk.cu
transpose/: CMakeLists.txt  naive_transpose.cu  transpose  transpose.cu
